# herald

./: .dockerignore  .gitignore  Dockerfile  Justfile  PRODUCTION_ISSUES.md  README.md  TESTING.md  docker-compose.yml  package.json  playwright.config.ts  pyproject.toml  pyvenv.cfg
.github/workflows/: deploy.yml
app/: main.py  routes.py
app/admin/: __init__.py  routes.py
app/api/: __init__.py  admin.py  feedback.py  game_helpers.py  game_schemas.py  games.py  proxy.py  websocket.py
app/army_forge/: __init__.py  client.py  import_fetch.py  import_service.py  parse.py  schemas.py
app/auth/: __init__.py  oauth.py
app/feedback/: __init__.py  routes.py
app/game/: __init__.py  routes.py
app/help/: __init__.py  routes.py
app/home/: routes.py
app/models/: __init__.py  base.py  event.py  feedback.py  game.py  game_save.py  objective.py  (+2 more)
deploy/: README.md  check_env.sh  cleanup_expired_games.py  cleanup_old_games.py  deploy.sh  fix_all_permissions.sh  fix_env_format.sh  fix_feedback_permissions.py  fix_feedback_permissions.sh  herald.service  init_db.py  migrate_add_attached_to_unit.py  migrate_add_feedback_table.py  migrate_add_game_expiration.py  migrate_add_player_army_book.py  migrate_add_player_spells.py  migrate_add_solo_mode.py  migrate_add_unit_action_events.py  migrate_add_unit_detached_enum.py  migrate_add_victory_points.py  migrate_add_vp_changed_enum.py  migrate_add_vp_changed_enum_uppercase.py  nginx.conf  otahak-deployment.md  run_migrations.py  run_pending_migrations.py
scripts/: build_gamestore.py
tests/: conftest.py  test_unit_stats.py
(+68 files in other folders)
