[project]
name = "herald"
version = "0.1.0"
description = "Litestar + SQLAlchemy + Postgres"
requires-python = ">=3.12"
dependencies = [
    "litestar[sqlalchemy]",
    "advanced-alchemy",
    "asyncpg",
    "uvicorn[standard]",
    "jinja2>=3.1.6",
    "httpx>=0.27",
    "pydantic>=2.0",
    "email-validator>=2.0.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
    "pytest-asyncio",
    "pytest-cov",
    "aiosqlite",
    "asgi-lifespan",
]
